# AT2_custom_turtlesim

./: CMakeLists.txt  README.txt  package.xml  setup.cfg
custom_turtlesim/: atividade_3.py  simulator_node.py  teleop_node.py
launch/: custom_turtlesim.launch.py  my_second_launch.launch.py
srv/: ChangeSprite.srv  ClearDrawing.srv  DrawPolygon.srv  GetTurtlePosition.srv  SetBgColor.srv  Spawn.srv
